--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -170,7 +170,7 @@ button[mat-fab] mat-icon {
     padding-left: 128px;
     padding-right: 128px;
     font-family: 'Open Sans', sans-serif;
-    font-size: 24px;
+    font-size: 20px;
     padding-top: 10px;
     line-height: 1.6;
     font-weight: 300;
@@ -188,7 +188,7 @@ button[mat-fab] mat-icon {
     padding-left: 128px;
     padding-right: 128px;
     font-family: 'Open Sans', sans-serif;
-    font-size: 22px;
+    font-size: 21px;
     padding-top: 15px;
 }
 
@@ -197,7 +197,7 @@ button[mat-fab] mat-icon {
     padding-right: 128px;
     padding-bottom: 10px;
     font-family: 'Open Sans', sans-serif;
-    font-size: 18px;
+    font-size: 15px;
     padding-top: 10px;
     line-height: 1.6;
     font-weight: 50;
